--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
 <!doctype html>
 <html class="no-js" lang="">
-
 <head>
   <meta charset="utf-8">
   <title>ROOM77 The Berlin Bar that Bootstrapped Bitcoin Is Closing</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="main.css">
   <meta name="theme-color" content="#fafafa">
 </head>
-
-<body>
-
-  <!-- Add your site or application content here -->
+<body> 
   <p>RIP Room 77</p>
    <p>"We accept Bitcoin and Monero, silver is fine too".</p>
 </body>
-
 </html>
