--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang=""> 
 <head>
   <meta charset="utf-8">
   <title>ROOM77 The Berlin Bar that Bootstrapped Bitcoin Is Closing</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="main.css"> 
-</head>
+  <meta name="description" content="Room77 bar Bitcoin Monero">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+   <style type="text/css">
+        body {
+          font-size: 9pt;
+          color: #c0c0c0;
+          background-color: #080808;
+        }
+        a, a.visited {
+          font-family: serif;
+          font-size: 12pt;
+          color: #606060;
+          text-decoration:none;
+        } 
+		 img {
+    page-break-inside: avoid;
+  } 
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
+    .accept img {
+    width: 30px;
+    height: 30px;
+	margin-right: 5px;
+    vertical-align: middle;
+}
+   </style>
+</head> 
 <body> 
   <p>RIP Room 77</p>
    <p>"We accept Bitcoin and Monero, silver is fine too".</p>
+   <div class="accept">
+   <h3 id="Bitcoin"><img src="BC_Logo_30x30.png">Bitcoin</h3>
+   <h3 id="Monero"><img src="Monero_Logo_30x30.png">Monero</h3>
+   </div>
 </body>
 </html>
+
