--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang=""> 
 <head>
   <meta charset="utf-8">
-  <title>ROOM77 The Berlin Bar that Bootstrapped Bitcoin Is Closing</title>
-  <meta name="description" content="Room77 bar Bitcoin Monero">
+  <title>ROOM77 encryption space</title>
+  <meta name="description" content="Room77 encryption space Bitcoin Monero">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
    <style type="text/css">
         body {
@@ -39,7 +39,7 @@
    </style>
 </head> 
 <body> 
-  <p>RIP Room 77</p>
+  <p>Room77 Encryption Space</p>
    <p>"We accept Bitcoin and Monero, silver is fine too".</p>
    <div class="accept">
    <h3 id="Bitcoin"><img src="BC_Logo_30x30.png">Bitcoin</h3>
