--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ROOM77 encryption space</title>
-  <meta name="description" content="Room77 encryption space Bitcoin Monero">
+  <meta name="description" content="Room77 Cryptocurrency Bitcoin Monero">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
    <style type="text/css">
         body {
@@ -39,11 +39,12 @@
    </style>
 </head> 
 <body> 
-  <p>Room77 Encryption Space</p>
+  <p>Room77 Cryptocurrency</p>
    <p>"We accept Bitcoin and Monero, silver is fine too".</p>
    <div class="accept">
    <h3 id="Bitcoin"><img src="BC_Logo_30x30.png">Bitcoin</h3>
    <h3 id="Monero"><img src="Monero_Logo_30x30.png">Monero</h3>
+	   contact : room77@i2pmail.org
    </div>
 </body>
 </html>
