--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
    <style type="text/css">
         body {
-          font-size: 24pt;
+          font-size: 30pt;
           color: #c0c0c0;
           background-color: #080808;
         }
@@ -42,8 +42,8 @@
   <p>Room77 Cryptocurrency</p>
    <p>"We accept Bitcoin and Monero, silver is fine too".</p>
    <div class="accept">
-   <h3 id="Bitcoin"><img src="BC_Logo_30x30.png">Bitcoin</h3>
-   <h3 id="Monero"><img src="Monero_Logo_30x30.png">Monero</h3>
+   <h3 id="Bitcoin">Bitcoin</h3>
+   <h3 id="Monero">Monero</h3>
 	   contact : room77@i2pmail.org
    </div>
 </body>
