--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang=""> 
 <head>
   <meta charset="utf-8">
-  <title>ROOM77 encryption space</title>
+  <title>ROOM77.org</title>
   <meta name="description" content="Room77 Cryptocurrency Bitcoin Monero">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
    <style type="text/css">
