--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ROOM77.org</title>
-  <meta name="description" content="Room77 Cryptocurrency Bitcoin Monero">
+  <meta name="description" content="Room77 Cryptocurrency  Monero">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
    <style type="text/css">
         body {
@@ -11,41 +11,11 @@
           color: #c0c0c0;
           background-color: #080808;
         }
-        a, a.visited {
-          font-family: serif;
-          font-size: 12pt;
-          color: #606060;
-          text-decoration:none;
-        } 
-		 img {
-    page-break-inside: avoid;
-  } 
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
-    .accept img {
-    width: 30px;
-    height: 30px;
-	margin-right: 5px;
-    vertical-align: middle;
-}
    </style>
 </head> 
-<body> 
-  <p>Room77 Cryptocurrency</p>
-   <p>"We accept Bitcoin and Monero, silver is fine too".</p>
-   <div class="accept">
-   <h3 id="Bitcoin">Bitcoin</h3>
-   <h3 id="Monero">Monero</h3>
-	   contact : room77@i2pmail.org
-   </div>
+<body>  
+   <h3>cryptocurrency Monero,Bitcoin</h3>
+  contact : room77@i2pmail.org
 </body>
 </html>
 
