--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
           font-size: 30pt;
           color: #c0c0c0;
-          background-color: beige;
+          background-color: black;
         }
    </style>
 </head> 
