--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
         body {
           font-size: 30pt;
           color: #c0c0c0;
-          background-color: beige;
+          background-color: black;
         }
    </style>
 </head> 
-<body>  
-   <h3>cryptocurrency Monero,Bitcoin</h3>
-  contact : room77@i2pmail.org
+<body>   
+  room77@i2pmail.org
 </body>
 </html>
 
