--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>ROOM77.org</title>
-  <meta name="description" content="Room77 Cryptocurrency  Monero">
+  <meta name="description" content="Room77.org">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
    <style type="text/css">
-        body {
-          font-size: 30pt;
+        body {         
           color: #c0c0c0;
           background-color: black;
         }
