--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
    </style>
 </head> 
 <body>   
-  room77@i2pmail.org
+  room77@i2pmail.org</br>
+ Donate:</br>
+ Monero 88XZar4LwzQdAxHqdxzEpaJXuVcrhFRuRNXVu9MhzTSccSh468LziqdUnnpybKV5QqaDiTwNi6JxNKj9nf4D79YKEpqWafS
 </body>
 </html>
 
