--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>   
   room77@i2pmail.org</br>
  Donate:</br>
- Monero 88XZar4LwzQdAxHqdxzEpaJXuVcrhFRuRNXVu9MhzTSccSh468LziqdUnnpybKV5QqaDiTwNi6JxNKj9nf4D79YKEpqWafS
+ Monero(XMR):88XZar4LwzQdAxHqdxzEpaJXuVcrhFRuRNXVu9MhzTSccSh468LziqdUnnpybKV5QqaDiTwNi6JxNKj9nf4D79YKEpqWafS
+ Bitcoin(BTC):1CVvTytu55i4mRmi2nRQGgjoCPHsfMgGTN
 </body>
 </html>
 
