--- a/index.html
+++ b/index.html
@@ -5,17 +5,59 @@
   <title>ROOM77.org</title>
   <meta name="description" content="Room77.org">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
-   <style type="text/css">
-        body {         
-          color: #c0c0c0;
-          background-color: black;
-        }
-   </style>
+    <style>
+    * {
+      line-height: 1.2;
+      margin: 0;
+    }
+
+    html {
+      color: #888;
+      display: table;
+      font-family: sans-serif;
+      height: 100%;
+      text-align: center;
+      width: 100%;
+    }
+
+    body {
+      display: table-cell;
+      vertical-align: middle;
+      margin: 2em auto;
+    }
+
+    h1 {
+      color: #555;
+      font-size: 2em;
+      font-weight: 400;
+    }
+
+    p {
+      margin: 0 auto;
+      width: 280px;
+    }
+
+    @media only screen and (max-width: 280px) {
+
+      body,
+      p {
+        width: 95%;
+      }
+
+      h1 {
+        font-size: 1.5em;
+        margin: 0 0 0.3em;
+      }
+
+    }
+  </style>
+</head>
 </head> 
 <body>   
   room77@i2pmail.org</br>
  Donate:</br>
  Monero(XMR):88XZar4LwzQdAxHqdxzEpaJXuVcrhFRuRNXVu9MhzTSccSh468LziqdUnnpybKV5QqaDiTwNi6JxNKj9nf4D79YKEpqWafS
+</br>
  Bitcoin(BTC):1CVvTytu55i4mRmi2nRQGgjoCPHsfMgGTN
 </body>
 </html>
